--- a/S02_Data_Preprocessing_–_correlate_bank_customer_params_to_credit_score.ipynb
+++ b/S02_Data_Preprocessing_–_correlate_bank_customer_params_to_credit_score.ipynb
@@ -90,84 +90,57 @@
         "scrolled": true,
         "id": "Su8n7LQu6rGo",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0517a489-3e2e-4e4f-b533-4d3e6d6e7e5c"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 578
+        },
+        "outputId": "201385fc-37e7-43e2-8efc-f391291d2d79"
       },
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "pd.set_option('display.width', 200)\n",
-        "credit_scoring = pd.read_csv('/datasets/credit_scoring_eng.csv')\n",
+        "credit_scoring = pd.read_csv('https://raw.githubusercontent.com/dnevo/Practicum/master/datasets/credit_scoring_eng.csv')\n",
         "print(credit_scoring.tail(30))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "       children  days_employed  dob_years            education  education_id      family_status  family_status_id gender    income_type  debt   total_income  \\\n",
-            "21495         1            NaN         50  secondary education             1  civil partnership                 1      F       employee     0            NaN   \n",
-            "21496         1    -759.680851         31  secondary education             1            married                 0      F       employee     0  119392.620079   \n",
-            "21497         0            NaN         48       MASTERS DEGREE             0            married                 0      F        partner     0            NaN   \n",
-            "21498         1   -1330.627998         32  secondary education             1  civil partnership                 1      M       employee     0  240767.575887   \n",
-            "21499         0   -9929.015065         57  secondary education             1  civil partnership                 1      M        partner     0  157553.158589   \n",
-            "21500         0    -578.082757         26      bachelor degree             2          unmarried                 4      M        partner     0   77813.293365   \n",
-            "21501         0  334343.096304         57  secondary education             1            married                 0      F        retiree     0   86232.126549   \n",
-            "21502         1            NaN         42  secondary education             1            married                 0      F       employee     0            NaN   \n",
-            "21503         0   -3096.881131         58  secondary education             1            married                 0      F       employee     0  264250.997662   \n",
-            "21504         0  355235.728158         68  secondary education             1            married                 0      F        retiree     0   80566.321329   \n",
-            "21505         0  338904.866406         53  secondary education             1  civil partnership                 1      M        retiree     0   75439.993167   \n",
-            "21506         1   -1556.249906         33       MASTERS DEGREE             0  civil partnership                 1      F       employee     0  145541.993320   \n",
-            "21507         1     -79.832064         32  secondary education             1  civil partnership                 1      F  civil servant     0   98180.279152   \n",
-            "21508         0  386497.714078         62  secondary education             1            married                 0      M        retiree     0   72638.590915   \n",
-            "21509         0  362161.054124         59       masters degree             0            married                 0      M        retiree     0   73029.059379   \n",
-            "21510         2            NaN         28  secondary education             1            married                 0      F       employee     0            NaN   \n",
-            "21511         0    -612.569129         29       masters degree             0  civil partnership                 1      F       employee     1  140068.472941   \n",
-            "21512         0    -165.377752         26       masters degree             0          unmarried                 4      M        partner     0  147301.457769   \n",
-            "21513         0   -1166.216789         35  secondary education             1            married                 0      F       employee     0  250986.142309   \n",
-            "21514         0    -280.469996         27      bachelor degree             2          unmarried                 4      M        partner     0  355988.407188   \n",
-            "21515         1    -467.685130         28  secondary education             1            married                 0      F       employee     1  109486.327999   \n",
-            "21516         0    -914.391429         42       masters degree             0            married                 0      F        partner     0  322807.776603   \n",
-            "21517         0    -404.679034         42       masters degree             0  civil partnership                 1      F        partner     0  178059.553491   \n",
-            "21518         0  373995.710838         59  SECONDARY EDUCATION             1            married                 0      F        retiree     0  153864.650328   \n",
-            "21519         1   -2351.431934         37      academic degree             4           divorced                 3      M       employee     0  115949.039788   \n",
-            "21520         1   -4529.316663         43  secondary education             1  civil partnership                 1      F        partner     0  224791.862382   \n",
-            "21521         0  343937.404131         67  secondary education             1            married                 0      F        retiree     0  155999.806512   \n",
-            "21522         1   -2113.346888         38  secondary education             1  civil partnership                 1      M       employee     1   89672.561153   \n",
-            "21523         3   -3112.481705         38  secondary education             1            married                 0      M       employee     1  244093.050500   \n",
-            "21524         2   -1984.507589         40  secondary education             1            married                 0      F       employee     0   82047.418899   \n",
+            "    Unnamed: 0  children  days_employed  ...    income_type debt  total_income\n",
+            "30          30         1            NaN  ...       employee    0           NaN\n",
+            "31          31         1    -759.680851  ...       employee    0  119392.62010\n",
+            "32          32         0            NaN  ...        partner    0           NaN\n",
+            "33          33         1   -1330.627998  ...       employee    0  240767.57590\n",
+            "34          34         0   -9929.015065  ...        partner    0  157553.15860\n",
+            "35          35         0    -578.082757  ...        partner    0   77813.29337\n",
+            "36          36         0  334343.096300  ...        retiree    0   86232.12655\n",
+            "37          37         1            NaN  ...       employee    0           NaN\n",
+            "38          38         0   -3096.881131  ...       employee    0  264250.99770\n",
+            "39          39         0  355235.728200  ...        retiree    0   80566.32133\n",
+            "40          40         0  338904.866400  ...        retiree    0   75439.99317\n",
+            "41          41         1   -1556.249906  ...       employee    0  145541.99330\n",
+            "42          42         1     -79.832064  ...  civil servant    0   98180.27915\n",
+            "43          43         0  386497.714100  ...        retiree    0   72638.59092\n",
+            "44          44         0  362161.054100  ...        retiree    0   73029.05938\n",
+            "45          45         2            NaN  ...       employee    0           NaN\n",
+            "46          46         0    -612.569129  ...       employee    1  140068.47290\n",
+            "47          47         0    -165.377752  ...        partner    0  147301.45780\n",
+            "48          48         0   -1166.216789  ...       employee    0  250986.14230\n",
+            "49          49         0    -280.469996  ...        partner    0  355988.40720\n",
+            "50          50         1    -467.685130  ...       employee    1  109486.32800\n",
+            "51          51         0    -914.391429  ...        partner    0  322807.77660\n",
+            "52          52         0    -404.679034  ...        partner    0  178059.55350\n",
+            "53          53         0  373995.710800  ...        retiree    0  153864.65030\n",
+            "54          54         1   -2351.431934  ...       employee    0  115949.03980\n",
+            "55          55         1   -4529.316663  ...        partner    0  224791.86240\n",
+            "56          56         0  343937.404100  ...        retiree    0  155999.80650\n",
+            "57          57         1   -2113.346888  ...       employee    1   89672.56115\n",
+            "58          58         3   -3112.481705  ...       employee    1  244093.05050\n",
+            "59          59         2   -1984.507589  ...       employee    0   82047.41890\n",
             "\n",
-            "                                             purpose  \n",
-            "21495                               wedding ceremony  \n",
-            "21496                                   to buy a car  \n",
-            "21497                            building a property  \n",
-            "21498                              to have a wedding  \n",
-            "21499                               wedding ceremony  \n",
-            "21500  transactions with the residential real estate  \n",
-            "21501                                        housing  \n",
-            "21502                         building a real estate  \n",
-            "21503                             to become educated  \n",
-            "21504                        supplementary education  \n",
-            "21505                              to have a wedding  \n",
-            "21506                               wedding ceremony  \n",
-            "21507                       second-hand car purchase  \n",
-            "21508                                       property  \n",
-            "21509                       real estate transactions  \n",
-            "21510                                   car purchase  \n",
-            "21511                buying property for renting out  \n",
-            "21512                to get asupplementary education  \n",
-            "21513                          purchase of the house  \n",
-            "21514                            building a property  \n",
-            "21515                             to become educated  \n",
-            "21516                       purchase of my own house  \n",
-            "21517                              buying my own car  \n",
-            "21518                              purchase of a car  \n",
-            "21519                     buy commercial real estate  \n",
-            "21520                           housing transactions  \n",
-            "21521                              purchase of a car  \n",
-            "21522                                       property  \n",
-            "21523                              buying my own car  \n",
-            "21524                                   to buy a car  \n"
+            "[30 rows x 13 columns]\n"
           ],
           "name": "stdout"
         }
@@ -178,34 +151,40 @@
       "metadata": {
         "id": "b4nXP7Cx6rGx",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e9a00e72-4a46-4400-8935-f51db9e2a169"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        },
+        "outputId": "47cdfd6f-d232-4d9d-80fb-ddc4ed75d072"
       },
       "source": [
         "print(credit_scoring.info())"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 21525 entries, 0 to 21524\n",
-            "Data columns (total 12 columns):\n",
-            "children            21525 non-null int64\n",
-            "days_employed       19351 non-null float64\n",
-            "dob_years           21525 non-null int64\n",
-            "education           21525 non-null object\n",
-            "education_id        21525 non-null int64\n",
-            "family_status       21525 non-null object\n",
-            "family_status_id    21525 non-null int64\n",
-            "gender              21525 non-null object\n",
-            "income_type         21525 non-null object\n",
-            "debt                21525 non-null int64\n",
-            "total_income        19351 non-null float64\n",
-            "purpose             21525 non-null object\n",
-            "dtypes: float64(2), int64(5), object(5)\n",
-            "memory usage: 2.0+ MB\n",
+            "RangeIndex: 60 entries, 0 to 59\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   Unnamed: 0        60 non-null     int64  \n",
+            " 1   children          60 non-null     int64  \n",
+            " 2   days_employed     53 non-null     float64\n",
+            " 3   dob_years         60 non-null     int64  \n",
+            " 4   education         60 non-null     object \n",
+            " 5   education_id      60 non-null     int64  \n",
+            " 6   f                 20 non-null     object \n",
+            " 7   amily_status      60 non-null     object \n",
+            " 8   family_status_id  60 non-null     int64  \n",
+            " 9   gender            60 non-null     object \n",
+            " 10  income_type       60 non-null     object \n",
+            " 11  debt              60 non-null     int64  \n",
+            " 12  total_income      53 non-null     float64\n",
+            "dtypes: float64(2), int64(6), object(5)\n",
+            "memory usage: 6.2+ KB\n",
             "None\n"
           ],
           "name": "stdout"
@@ -227,19 +206,22 @@
       "metadata": {
         "id": "v3MgHC_Z6rG2",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0f617249-e1f1-4128-ef82-ff5c0d194111"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "c8207281-765c-4397-a4b4-b26c1becdf5c"
       },
       "source": [
         "print(credit_scoring['debt'].value_counts())"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0    19784\n",
-            "1     1741\n",
+            "0    55\n",
+            "1     5\n",
             "Name: debt, dtype: int64\n"
           ],
           "name": "stdout"
