--- a/S05_Integrated_Project_1_–_hypothesis_on_user_rating_of_video_games.ipynb
+++ b/S05_Integrated_Project_1_–_hypothesis_on_user_rating_of_video_games.ipynb
@@ -82,13 +82,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "0d676866-de10-4dea-a676-55e426ff6582"
+        "outputId": "fdc3b224-1e21-4740-fc62-4c574a4725cd"
       },
       "source": [
-        "games = pd.read_csv('https://raw.githubusercontent.com/dnevo/Practicum/master/datasets/games.csv',index_col=0).reset_index()\n",
+        "games = pd.read_csv('https://raw.githubusercontent.com/dnevo/Practicum/master/datasets/games.csv')\n",
         "games.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 6
         }
       ]
     },
@@ -225,12 +225,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 323
         },
-        "outputId": "9add93f5-fb19-47df-8dd3-ea1fd52c154d"
+        "outputId": "a92734e9-6eb7-4259-9dd9-d4bd19683d00"
       },
       "source": [
         "games.info()"
       ],
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
       "source": [
         "games.describe()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +473,7 @@
         "games.columns = map(str.lower, games.columns)\n",
         "games.columns"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +510,7 @@
         "games['user_score'] = games['user_score'].replace('tbd', np.nan)\n",
         "games['user_score'] = games['user_score'].astype(float)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -537,7 +537,7 @@
       "source": [
         "games['user_score'].describe()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -583,7 +583,7 @@
       "source": [
         "games = games[games['name'].notna()]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +623,7 @@
         "# Note: Int64 is the only integer datatype allowing array as integer while having NaN values\n",
         "games['year_of_release'] = games['year_of_release'].astype('Int64')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -659,7 +659,7 @@
         "    return row['rating']\n",
         "games['rating'] = games.apply(assign_rating, axis=1)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -686,7 +686,7 @@
       "source": [
         "games.groupby(by='rating')['rating'].count().sort_values(ascending=False)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,7 +742,7 @@
         "rare_ratings = ['EC', 'RP','K-A','AO']\n",
         "games = games.query('rating not in @rare_ratings')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
       "source": [
         "games.groupby(by='genre')['genre'].count().sort_values(ascending=False)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -818,7 +818,7 @@
       "source": [
         "games['total_sales'] = games['na_sales'] + games['eu_sales'] + games['jp_sales'] + games['other_sales']"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +845,7 @@
       "source": [
         "games.pivot_table(index='platform', columns='year_of_release', values='total_sales',aggfunc='count')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2329,7 +2329,7 @@
         "games = games[games['year_of_release'] >= 1990]\n",
         "games.pivot_table(index='platform', columns='year_of_release', values='total_sales',aggfunc='count')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3449,7 +3449,7 @@
         "platforms = games.groupby(by='platform')['platform'].count().sort_values(ascending=False)\n",
         "platforms"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3522,7 +3522,7 @@
         "platforms_lt_100 = list(games.groupby(by='platform')['platform'].count()[platforms<100].index)\n",
         "games.query('platform in @platforms_lt_100').pivot_table(index='platform', columns='year_of_release', values='total_sales',aggfunc='count')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3851,7 +3851,7 @@
         "games = games.query('platform not in @platforms_lt_100')\n",
         "games.pivot_table(index='platform', columns='year_of_release', values='total_sales',aggfunc='count')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4587,7 +4587,7 @@
         "games.drop(games[(games['platform'] == 'PS3') & (games['year_of_release'] == 1991)].index, inplace=True)\n",
         "games.drop(games[(games['platform'] == '3DS') & (games['year_of_release'] == 2000)].index, inplace=True)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4648,7 +4648,7 @@
         "top5_platforms = list(games.groupby(by='platform')['total_sales'].sum().sort_values(ascending=False).head().index)\n",
         "top5_platforms"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4688,7 +4688,7 @@
       "source": [
         "list(games.groupby(by='platform')['platform'].count().sort_values(ascending=False).head().index)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4730,7 +4730,7 @@
         "top5_distribution = top5_platforms_games.pivot_table(index='platform', columns='year_of_release', values='total_sales',aggfunc='count')\n",
         "top5_distribution"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4955,7 +4955,7 @@
         "print(top5_distribution.notna().sum(axis=1))\n",
         "print('mean=',top5_distribution.notna().sum(axis=1).mean())"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4993,7 +4993,7 @@
       "source": [
         "games_no_pc = games.drop(games[(games['platform'] == 'PC')].index)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5022,7 +5022,7 @@
         "platforms_sales = platforms_sales_tmp[platforms_sales_tmp[2016]>0].dropna(axis=1, how='all')\n",
         "platforms_sales"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5246,7 +5246,7 @@
         "platforms_titles = platforms_titles_tmp[platforms_titles_tmp[2016]>0].dropna(axis=1, how='all')\n",
         "platforms_titles"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5495,7 +5495,7 @@
       "source": [
         "platforms_sales.T.plot.box();"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5560,7 +5560,7 @@
         "print(games['critic_score'].corr(games['total_sales']))\n",
         "games.plot.scatter(x='critic_score',y='total_sales');"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5612,7 +5612,7 @@
         "print(games['user_score'].corr(games['total_sales']))\n",
         "games.plot.scatter(x='user_score',y='total_sales');"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5665,7 +5665,7 @@
         "    index='name', columns='platform', values='total_sales',aggfunc='sum',margins=True\n",
         "    ).sort_values(by='All',ascending=False).head(10)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5907,7 +5907,7 @@
         "g16.columns = ['# of games', 'tot sales', 'mean']\n",
         "g16.sort_values(by='mean', ascending=False)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6079,7 +6079,7 @@
         "g.columns = ['# of games', 'tot sales', 'mean']\n",
         "g.sort_values(by='mean', ascending=False)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6240,7 +6240,7 @@
         "genres_sales = games_no_pc.pivot_table(index='genre', columns='year_of_release', values='total_sales',aggfunc='sum')\n",
         "genres_sales.T.plot.box(figsize=(15, 5));"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6310,7 +6310,7 @@
         "sales_2016_regions['na_sales(%)'] = sales_2016_regions['na_sales'] / sales_2016_regions['na_sales'].sum() * 100\n",
         "sales_2016_regions.head(6)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6461,7 +6461,7 @@
         "plot_df = sales_2016_regions[['eu_sales', 'jp_sales','na_sales']].T\n",
         "plot_df.plot.barh(stacked=True, figsize=(10,7))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6523,7 +6523,7 @@
         "sales_2016_regions['na_sales(%)'] = sales_2016_regions['na_sales'] / sales_2016_regions['na_sales'].sum() * 100\n",
         "sales_2016_regions.head(5)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6670,7 +6670,7 @@
         "sales_2016_regions['na_sales(%)'] = sales_2016_regions['na_sales'] / sales_2016_regions['na_sales'].sum() * 100\n",
         "sales_2016_regions"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6844,7 +6844,7 @@
         "else:\n",
         "        print(\"H0 cannot be rejected: Average user ratings of the Xbox One (XOne) and PC platforms is the same\")"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6908,7 +6908,7 @@
         "else:\n",
         "        print(\"H0 cannot be rejected: Average user ratings of Action and Sports genres is the same\")"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
