--- a/S12_Numerical_Methods_–_market_value_of_car.ipynb
+++ b/S12_Numerical_Methods_–_market_value_of_car.ipynb
@@ -88,9 +88,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 275
+          "height": 255
         },
-        "outputId": "59d2f1c4-f3bb-4abc-998a-5bd0a2b915c9"
+        "outputId": "ccc62fae-adff-4ad2-a57d-089ec5b46af9"
       },
       "source": [
         "colab = True\n",
@@ -100,25 +100,25 @@
         "else:\n",
         "    data_path = '/datasets/car_data.csv'"
       ],
-      "execution_count": 45,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: catboost in /usr/local/lib/python3.6/dist-packages (0.23.2)\n",
+            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.6/dist-packages (from catboost) (1.18.5)\n",
+            "Requirement already satisfied: plotly in /usr/local/lib/python3.6/dist-packages (from catboost) (4.4.1)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from catboost) (3.2.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from catboost) (1.4.1)\n",
             "Requirement already satisfied: graphviz in /usr/local/lib/python3.6/dist-packages (from catboost) (0.10.1)\n",
             "Requirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.6/dist-packages (from catboost) (1.0.5)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from catboost) (1.12.0)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.6/dist-packages (from catboost) (3.2.2)\n",
-            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.6/dist-packages (from catboost) (1.18.5)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from catboost) (1.4.1)\n",
-            "Requirement already satisfied: plotly in /usr/local/lib/python3.6/dist-packages (from catboost) (4.4.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24.0->catboost) (2.8.1)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24.0->catboost) (2018.9)\n",
+            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.6/dist-packages (from plotly->catboost) (1.3.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (2.8.1)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (2.4.7)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (0.10.0)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (1.2.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib->catboost) (2.4.7)\n",
-            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.6/dist-packages (from plotly->catboost) (1.3.3)\n"
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24.0->catboost) (2018.9)\n"
           ],
           "name": "stdout"
         }
@@ -146,7 +146,7 @@
         "pd.set_option('display.max_columns', None)\n",
         "pd.options.display.float_format = '{:11,.2f}'.format"
       ],
-      "execution_count": 46,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -159,13 +159,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 394
         },
-        "outputId": "42caa173-a0b5-415e-ca85-a31c4508dde7"
+        "outputId": "b3f8ca0e-dd64-46be-8b9d-e3db1a526df7"
       },
       "source": [
-        "data = pd.read_csv(data_path,parse_dates=['DateCrawled', 'DateCreated', 'LastSeen'])\n",
+        "data = pd.read_csv(data_path)\n",
+        "data['DateCrawled'] = pd.to_datetime(data['DateCrawled'], format='%d/%m/%Y %H:%M')\n",
+        "data['DateCreated'] = pd.to_datetime(data['DateCreated'], format='%d/%m/%Y %H:%M')\n",
+        "data['LastSeen'] = pd.to_datetime(data['LastSeen'], format='%d/%m/%Y %H:%M')\n",
         "data.head()"
       ],
-      "execution_count": 47,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,7 +228,7 @@
               "      <td>2016-03-24</td>\n",
               "      <td>0</td>\n",
               "      <td>70435</td>\n",
-              "      <td>2016-07-04 03:16:00</td>\n",
+              "      <td>2016-04-07 03:16:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -244,7 +247,7 @@
               "      <td>2016-03-24</td>\n",
               "      <td>0</td>\n",
               "      <td>66954</td>\n",
-              "      <td>2016-07-04 01:46:00</td>\n",
+              "      <td>2016-04-07 01:46:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -263,7 +266,7 @@
               "      <td>2016-03-14</td>\n",
               "      <td>0</td>\n",
               "      <td>90480</td>\n",
-              "      <td>2016-05-04 12:47:00</td>\n",
+              "      <td>2016-04-05 12:47:00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -301,7 +304,7 @@
               "      <td>2016-03-31</td>\n",
               "      <td>0</td>\n",
               "      <td>60437</td>\n",
-              "      <td>2016-06-04 10:17:00</td>\n",
+              "      <td>2016-04-06 10:17:00</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -316,19 +319,32 @@
               "4 2016-03-31 17:25:00   3600       small              2008  manual     69  fabia    90000                  7  gasoline       skoda          no  2016-03-31                 0       60437   \n",
               "\n",
               "             LastSeen  \n",
-              "0 2016-07-04 03:16:00  \n",
-              "1 2016-07-04 01:46:00  \n",
-              "2 2016-05-04 12:47:00  \n",
+              "0 2016-04-07 03:16:00  \n",
+              "1 2016-04-07 01:46:00  \n",
+              "2 2016-04-05 12:47:00  \n",
               "3 2016-03-17 17:40:00  \n",
-              "4 2016-06-04 10:17:00  "
+              "4 2016-04-06 10:17:00  "
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GHMJjvWHbQJH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 19,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -357,7 +373,7 @@
       "source": [
         "data.describe(include='all')"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +721,7 @@
       "source": [
         "data.info()"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,7 +818,7 @@
       "source": [
         "data.drop(['NumberOfPictures', 'PostalCode', 'RegistrationMonth'], axis=1, inplace=True)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +843,7 @@
         "data = data.loc[data['Model'] != 'other']\n",
         "data = data.loc[~data['Model'].isna()]"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -852,7 +868,7 @@
         "lt_20 =data['Model'].value_counts().gt(19)\n",
         "data = data.loc[data['Model'].isin(lt_20[lt_20].index)]"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -876,7 +892,7 @@
       "source": [
         "data = data.loc[data['Price'] >= 10]"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -913,7 +929,7 @@
         "data = data.loc[data['RegistrationYear'] >= 1960]\n",
         "data = data.loc[data['RegistrationYear'] <= 2016]"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -939,7 +955,7 @@
         "data['VehicleType'].fillna(data.groupby('Model')['VehicleType'].transform(lambda x:x.value_counts().index[0]),inplace=True)\n",
         "data['FuelType'].fillna(data.groupby('Model')['FuelType'].transform(lambda x:x.value_counts().index[0]),inplace=True)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -963,7 +979,7 @@
       "source": [
         "data['NotRepaired'].fillna('no',inplace=True)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1004,7 +1020,7 @@
       "source": [
         "data['Power'].quantile(0.995)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1032,7 +1048,7 @@
         "data['Power'] = np.where(data['Power'] < 20 , data.groupby('Model')['Power'].transform(lambda x:x.value_counts().index[0]), data['Power'])\n",
         "data['Power'] = np.where(data['Power'] > 326, data.groupby('Model')['Power'].transform(lambda x:x.value_counts().index[0]), data['Power'])"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1057,7 +1073,7 @@
         "data['days_seen'] = (data.LastSeen - data.DateCreated).dt.days\n",
         "data.drop(['DateCrawled', 'DateCreated', 'LastSeen'], axis=1, inplace=True)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1083,7 +1099,7 @@
         "for c in categorical_features:\n",
         "    data[c] = data[c].astype('category')"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1102,7 +1118,7 @@
         "    print(f'--- feature: {cat}, nuniques: {data[cat].nunique()} ---')\n",
         "    print(data[cat].value_counts())"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1235,7 +1251,7 @@
         "    target_test = df_test[target_col]\n",
         "    return features_train, target_train, features_valid, target_valid, features_test, target_test"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1252,7 +1268,7 @@
         "    rmse_test = mean_squared_error(target_test, prediction_test) ** 0.5\n",
         "    print(f'RMSE Train: {rmse_train:,.0f}, Valid: {rmse_valid:,.0f}, Test: {rmse_test:,.0f}, diff(Train,Valid):{100*(rmse_valid - rmse_train)/rmse_train:,.1f}%')"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1289,7 +1305,7 @@
         "data_ohe = pd.get_dummies(data1, columns=categorical_features, drop_first=True)\n",
         "features_train, target_train, features_valid, target_valid, features_test, target_test = split_groups(data_ohe, 'Price')"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1314,7 +1330,7 @@
         "    prediction_test = model.predict(features_test)\n",
         "    print_rmse()"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1358,7 +1374,7 @@
       "source": [
         "features_train, target_train, features_valid, target_valid, features_test, target_test = split_groups(data, 'Price')"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1393,7 +1409,7 @@
         "    prediction_test = model.predict(features_test)\n",
         "    print_rmse()"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1503,7 +1519,7 @@
         "prediction_test = gbm.predict(features_test, num_iteration=gbm.best_iteration)\n",
         "print_rmse()"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1565,7 +1581,7 @@
         "prediction_test = gbm.predict(features_test, num_iteration=gbm.best_iteration)\n",
         "print_rmse()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1691,7 +1707,7 @@
       "source": [
         ""
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     }
   ]
